# noughts-and-crosses

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: Game.cpp  Game.h  game.cpp  game.h  main.cpp  map.cpp  map.h
tests/: CMakeLists.txt  GameTests.cpp  GameTests.h
